2005-06-10  Miles Bader  <miles@gnu.org>

	* strokes.el (strokes-char): Remove "-face" suffix from face name.
	(strokes-char-face): New backward-compatibility alias for renamed face.
	(strokes-encode-buffer): Use renamed strokes-char face.

	* pcvs-info.el (cvs-header, cvs-filename, cvs-unknown)
	(cvs-handled, cvs-need-action, cvs-marked, cvs-msg):
	Remove "-face" suffix from face names.
	(cvs-header-face, cvs-filename-face, cvs-unknown-face)
	(cvs-handled-face, cvs-need-action-face, cvs-marked-face)
	(cvs-msg-face): New backward-compatibility aliases for renamed faces.
	(cvs-fi-up-to-date-face, cvs-fi-unknown-face, cvs-fileinfo-pp): 
	Use renamed pcvs faces.
	* pcvs.el (cvs-mode-find-file): Use renamed pcvs faces.
	* pcvs-defs.el (cvs-mode-map): Likewise.
	* cvs-status.el (cvs-status-font-lock-keywords): Likewise.

	* info.el (info-title-1, info-title-2, info-title-3)
	(info-title-4): Remove "-face" suffix from and downcase face names.
	(Info-title-1-face, Info-title-2-face, Info-title-3-face)
	(Info-title-4-face):
	New backward-compatibility aliases for renamed faces.
	(Info-fontify-node): Use renamed info faces.

	* hilit-chg.el (highlight-changes, highlight-changes-delete):
	Remove "-face" suffix from face names.
	(highlight-changes-face, highlight-changes-delete-face):
	New backward-compatibility aliases for renamed faces.
	(hilit-chg-cust-fix-changes-face-list, hilit-chg-make-ov)
	(hilit-chg-make-list): Use renamed highlight-changes faces.

	* generic-x.el (show-tabs-tab, show-tabs-space):
	Remove "-face" suffix from face names.
	(show-tabs-tab-face, show-tabs-space-face):
	New backward-compatibility aliases for renamed faces.
	(show-tabs-generic-mode-font-lock-defaults-1)
	(show-tabs-generic-mode-font-lock-defaults-2):
	Use renamed show-tabs faces.

	* smerge-mode.el (smerge-mine, smerge-other, smerge-base)
	(smerge-markers): Remove "-face" suffix from face names.
	(smerge-mine-face, smerge-other-face, smerge-base-face)
	(smerge-markers-face): 