@@ -1,6 +1,6 @@
 ;;; compare-w.el --- compare text between windows for Emacs
 
-;; Copyright (C) 1986,1989,1993,1997,2003,2004 Free Software Foundation, Inc.
+;; Copyright (C) 1986,1989,1993,1997,2003,2004,2005 Free Software Foundation, Inc.
 
 ;; Maintainer: FSF
 ;; Keywords: convenience files
@@ -116,7 +116,7 @@ and the value `((4) (4))' for horizontally split windows."
   :type 'boolean
   :group 'compare-w)
 
-(defface compare-windows-face
+(defface compare-windows
   '((((class color) (min-colors 88) (background light))
      (:background "paleturquoise"))
     (((class color) (min-colors 88) (background dark))
@@ -126,6 +126,8 @@ and the value `((4) (4))' for horizontally split windows."
     (t (:underline t)))
   "Face for highlighting of compare-windows difference regions."
   :group 'compare-w)
+;; backward-compatibility alias
+(put 'compare-windows-face 'face-alias 'compare-windows)
 
 (defvar compare-windows-overlay1 nil)
 (defvar compare-windows-overlay2 nil)
@@ -341,13 +343,13 @@ on third call it again advances points to the next difference and so on."
     (if compare-windows-overlay1
         (move-overlay compare-windows-overlay1 beg1 end1 b1)
       (setq compare-windows-overlay1 (make-overlay beg1 end1 b1))
-      (overlay-put compare-windows-overlay1 'face 'compare-windows-face)
+      (overlay-put compare-windows-overlay1 'face 'compare-windows)
       (overlay-put compare-windows-overlay1 'priority 1))
     (overlay-put compare-windows-overlay1 'window w1)
     (if compare-windows-overlay2
         (move-overlay compare-windows-overlay2 beg2 end2 b2)
       (setq compare-windows-overlay2 (make-overlay beg2 end2 b2))
-      (overlay-put compare-windows-overlay2 'face 'compare-windows-face)
+      (overlay-put compare-windows-overlay2 'face 'compare-windows)
       (overlay-put compare-windows-overlay2 'priority 1))
     (overlay-put compare-windows-overlay2 'window w2)
     ;; Remove highlighting before next command is executed
